Ids changed, repos added, distr disabled, some plugins disabled
Ids changed, repos added, distr disabled, some plugins disabled

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 *.ipr
 *.iml
 *.iws
-target/*
 .settings/*
 .project
 .classpath
 .factorypath
-/target
 .idea
 .java-version
 .mvn/wrapper/maven-wrapper.jar
+
+dependency-reduced-pom.xml
+
+target
+*.bak
