--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
         <relativePath />
     </parent>
 
-    <groupId>com.akathist.maven.plugins.launch4j</groupId>
-    <artifactId>launch4j-maven-plugin</artifactId>
+    <groupId>lbfork-launch4j-maven-plugin</groupId>
+    <artifactId>lbfork-launch4j-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.4.2-SNAPSHOT</version>
+    <version>2.4.7-SNAPSHOT</version>
 
-    <name>Maven Launch4j Plugin</name>
+    <name>LBFork-patchbase2 Maven Launch4j Plugin</name>
     <description>This plugin creates Windows executables from Java jar files using the Launch4j utility.</description>
     <url>https://orphan.software/</url>
 
@@ -33,6 +33,34 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    
+    <distributionManagement>
+        <repository>
+            <id>repsy-lbnet-releases</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>repsy-lbnet-snapshots</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+        
+    <repositories>
+        <repository>
+            <id>repsy-lbnet-releases</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>repsy-lbnet-snapshots</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <licenses>
         <license>
@@ -42,18 +70,21 @@
         </license>
     </licenses>
 
-    <scm>
+<!--    <scm>
         <connection>scm:git:git@github.com:orphan-oss/launch4j-maven-plugin.git</connection>
         <url>git@github.com:orphan-oss/launch4j-maven-plugin.git</url>
         <developerConnection>scm:git:git@github.com:orphan-oss/launch4j-maven-plugin.git</developerConnection>
         <tag>HEAD</tag>
-    </scm>
+    </scm>-->
 
     <dependencies>
         <dependency>
             <groupId>net.sf.launch4j</groupId>
+            <!--<groupId>lbfork-launch4j</groupId>-->
             <artifactId>launch4j</artifactId>
-            <version>${launch4j.version}</version>
+            <!--<artifactId>lbfork-launch4j</artifactId>-->
+            <version>3.50</version>
+            <!--<version>3.53-SNAPSHOT</version>-->
             <classifier>core</classifier>
             <exclusions>
                 <exclusion>
@@ -207,7 +238,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.12.1</version>
@@ -226,7 +257,7 @@
                         <version>1.12.0</version>
                     </dependency>
                 </dependencies>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
@@ -275,7 +306,7 @@
 
     <reporting>
         <plugins>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>3.5.0</version>
@@ -300,7 +331,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.6.3</version>
-            </plugin>
+            </plugin>-->
         </plugins>
     </reporting>
 </project>
