--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <groupId>com.akathist.maven.plugins.launch4j</groupId>
     <artifactId>launch4j-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.4.2-SNAPSHOT</version>
+    <version>2.4.1-MYREPO</version>
 
     <name>Maven Launch4j Plugin</name>
     <description>This plugin creates Windows executables from Java jar files using the Launch4j utility.</description>
@@ -42,12 +42,57 @@
         </license>
     </licenses>
 
+<!--
     <scm>
         <connection>scm:git:git@github.com:orphan-oss/launch4j-maven-plugin.git</connection>
         <url>git@github.com:orphan-oss/launch4j-maven-plugin.git</url>
         <developerConnection>scm:git:git@github.com:orphan-oss/launch4j-maven-plugin.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
+-->
+
+    <distributionManagement>
+        <repository>
+            <id>repsy-lbnet-releases</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>repsy-lbnet-snapshots</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <repositories>
+        <repository>
+            <id>repsy-lbnet-releases</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>repsy-lbnet-snapshots</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repsy-lbnet-releases</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </pluginRepository>
+        <pluginRepository>
+            <id>repsy-lbnet-snapshots</id>
+            <url>https://repo.repsy.io/mvn/lilianne_blaze/lbnet-snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
     <dependencies>
         <dependency>
