--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
     <groupId>lbfork-launch4j-maven-plugin</groupId>
     <artifactId>lbfork-launch4j-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.4.7-SNAPSHOT</version>
+    <version>2.4.8-SNAPSHOT</version>
 
-    <name>LBFork-patchbase2 Maven Launch4j Plugin</name>
+    <name>LBFork-sandbox3 Maven Launch4j Plugin</name>
     <description>This plugin creates Windows executables from Java jar files using the Launch4j utility.</description>
     <url>https://orphan.software/</url>
 
@@ -237,6 +237,8 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                </configuration>
             </plugin>
 <!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
